submission action and db duplicate checking

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,11 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-#.vscode
+# .vscode
 .vscode/
+
+# prisma
+*.db
+*.sqlite
+*.sqlite3
+*.db-journal
